Replace homepage tiles with swiattoalet.pl product photos and fix image cropping
- Updated mobile WC tiles to use authentic Polish product images
- Fixed CSS background-size from cover to contain to prevent cropping
- Added white background for seamless display of Polish images
- Completed final shower tile update to kabina-prysznicowa.png

--- a/_sass/components/_tiles.scss
+++ b/_sass/components/_tiles.scss
@@ -27,7 +27,8 @@
 			@include padding(4em, 4em);
 			background-position: center;
 			background-repeat: no-repeat;
-			background-size: cover;
+			background-size: contain;
+			background-color: white;
 			cursor: default;
 			height: 40vh;
 			max-height: 40em;
